few cards added

--- a/index.html
+++ b/index.html
@@ -36,5 +36,14 @@
         <img src="assets/animation.webp" alt="image" class="image" />
       </div>
     </section>
+
+    <section class="cards">
+      <div class="card-1">1</div>
+      <div class="card-2">2</div>
+      <div class="card-3">3</div>
+      <div class="card-4">4</div>
+      <div class="card-5">5</div>
+      <div class="card-6">6</div>
+    </section>
   </body>
 </html>
