--- a/index.html
+++ b/index.html
@@ -38,12 +38,26 @@
     </section>
 
     <section class="cards">
-      <div class="card-1">1</div>
-      <div class="card-2">2</div>
-      <div class="card-3">3</div>
-      <div class="card-4">4</div>
-      <div class="card-5">5</div>
-      <div class="card-6">6</div>
+      <div class="card-1">
+        <img src="assets/animation.webp" alt="pic" class="pic" />
+      </div>
+      <div class="card-2">
+        <img src="assets/images-2.jpeg" alt="pic" class="pic" />
+      </div>
+      <div class="card-3">
+        <img src="assets/images.jpeg" alt="pic" class="pic" />
+      </div>
+      <div class="card-4">
+        <img src="assets/images-3.jpeg" alt="pic" class="pic" />
+      </div>
+      <div class="card-5">
+        <img src="assets/images-4.jpeg" alt="pic" class="pic" />
+      </div>
+      <div class="card-6">
+        <img src="assets/images-5.jpeg" alt="pic" class="pic" />
+      </div>
     </section>
+
+    <div class="animate-box"></div>
   </body>
 </html>
